# ocr-jokebox

./: .gitignore  LICENSE  README.md  pyproject.toml
run/: Makefile  app.py  stop.py  utils.py
sandbox/: Makefile  checkout_pytesseract.py  checkout_soco.py  links  play.py  pseudo.py  rotate.py  str_match.py  take_a_picture.py  test.py
